examples/test/testpolicy16926.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16926
  namespace: namespace478
spec:
  podSelector:
    matchLabels:
      key25: value49
      key44: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value39
      podSelector:
        matchLabels:
          key49: value25
          key14: value34
          key13: value35
